@@ -112,7 +112,9 @@ above.
   $ pantry sync node NAME
 
 Copies cookbooks and configuration data to the C<NAME> node and invokes
-C<chef-solo> via C<ssh> to start a configuration run.
+C<chef-solo> via C<ssh> to start a configuration run.  After configuration,
+the latest run-report for the node is updated in the 'reports' directory
+of the pantry.
 
 =head3 edit
 
